# sandbox-system

./: .env.prod.example  .gitignore  API_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  Dockerfile.sandbox  INTEGRATION_GUIDE.md  README.md  SETUP_GUIDE.md  docker-compose.prod.yml  main.py  pyproject.toml  quickstart.sh  sandbox-prompt.md  sandbox_client.py  sandbox_server.py  sandbox_shell.py  test.py
.claude/: settings.local.json
sandbox/: .env  Dockerfile.coordinator  Dockerfile.secure  Dockerfile.worker  client.py  command_whitelist.py  coordinator.py  docker-compose.yml  load_test.py  requirements.txt  server.py  settings.py  test_sandbox_v2.py
sandbox-v1/: ARCHITECTURE.md  langgraph_example.py
sandbox-v2/: .env.example  Dockerfile.coordinator  Dockerfile.worker  ENHANCED_V2_README.md  INTEGRATION_GUIDE.md  SETUP_GUIDE_V2.md  SUMMARY.md  coordinator.py  docker-compose.yml  load_test.py  sandbox_client_v2.py  sandbox_server_v2.py  server.py  settings.py  test_docker_user.py  test_user.py
sandbox-v2/.claude/: settings.local.json
sandbox-v2/docs/: MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md
sandbox/docs/: AI_AGENT_SANDBOX_INTEGRATION.md  README_V2.md  multi_vps_architecture.md
