[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypa-sandbox"
version = "0.1.0"
description = "MyPA Sandbox System - Secure code execution environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MyPA Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "docker>=7.0.0",
    "fastapi>=0.121.0",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
